--- a/Dockerfile.local
+++ b/Dockerfile.local
@@ -32,6 +32,8 @@ ENV PYTHONUNBUFFERED=1
 ENV PORT=8080
 EXPOSE 8080
 
+RUN apt update && apt install -y git
+
 # Prepare a non-root user
 RUN adduser --system worker
 WORKDIR /home/worker/app
